--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "license": "ISC",
     "dependencies": {
+        "@vercel/analytics": "^0.1.6",
         "dotenv": "^16.0.3",
         "next": "^13.0.6",
         "react": "^18.2.0",
