--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "@vercel/analytics": "^0.1.6",
         "dotenv": "^16.0.3",
+        "framer-motion": "^7.6.19",
         "next": "^13.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
