--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "framer-motion": "^7.6.19",
         "next": "^13.0.6",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-use-scroll": "^1.0.3"
     }
 }
